--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "flower-client",
-  "version": "0.0.0",
+  "name": "flower-api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "vue": "^3.0.5",
-    "vue-router": "^4.0.6"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^1.2.2",
-    "@vue/compiler-sfc": "^3.0.5",
-    "vite": "^2.3.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.7"
   }
 }
